Avance de la pantalla de inicio. Inclusion de animate.css para efectos. Modificacion layout

--- a/HotelesPuraVida/HotelesPuraVida/Views/Home/GuestIndex.cshtml
+++ b/HotelesPuraVida/HotelesPuraVida/Views/Home/GuestIndex.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewBag.Title = "Welcome";
+    Layout = null;
 }
 
 
@@ -18,11 +19,11 @@
         <img src="Content/Images/GuestHome.png" class="animated fadeInDown" />
         <br /><br /><br />
     </div>
-    <div class="col-md-3 noFloat  text-center" style="font-size:19px;position:center">
+    <div class="col-md-3 noFloat text-center" style="font-size:19px;position:center">
         <nav>
             <a class="animated fadeInDown delay-1" href="Account/Register.aspx">Register now for reservate |</a>
             <a class="animated fadeInDown delay-2" href="Account/Login.aspx">Sign up |</a>
-            <a class="animated fadeInDown delay-3" href="/About.aspx">About us</a>
+            <a class="animated fadeInDown delay-3" href="/About.aspx">About us</a>            
         </nav>
     </div>
     <br /><br /><br /><br />
