--- a/HotelesPuraVida/HotelesPuraVida/Content/Site.css
+++ b/HotelesPuraVida/HotelesPuraVida/Content/Site.css
@@ -16,3 +16,63 @@ textarea {
     max-width: 280px;
 }
 
+.noFloat {
+    float: none;
+    margin: 0 auto;
+}
+
+.delay-1 {
+    animation-delay: 1s;
+    -webkit-animation-delay: 1s;
+    -moz-animation-delay: 1s;
+}
+
+.delay-2 {
+    animation-delay: 2s;
+}
+
+.delay-3 {
+    animation-delay: 3s;
+}
+
+.delay-4 {
+    animation-delay: 4s;
+}
+
+.marginRight {
+    margin-right: 20px;
+}
+
+img.grayscale {
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+, IE10 */
+    filter: gray; /* IE6-9 */
+    -webkit-filter: grayscale(100%);
+    -webkit-transition: all .6s ease;
+    -webkit-backface-visibility: hidden;
+}
+
+    img.grayscale:hover {
+        filter: none;
+        -webkit-filter: grayscale(0%);
+    }
+
+svg image {
+    transition: all .6s ease;
+}
+
+    svg image:hover {
+        opacity: 0;
+    }
+
+
+#logo {
+    float: left;
+}
+
+#nav {
+    width: 1500px;
+}
+
+.navigation {
+    float: left;
+}
