--- a/HotelesPuraVida/HotelesPuraVida/Content/bootstrap.css
+++ b/HotelesPuraVida/HotelesPuraVida/Content/bootstrap.css
@@ -1102,7 +1102,7 @@ pre code {
     width: 16.666666666666664%;
   }
   .col-md-3 {
-    width: 25%;
+    width: 33.33333333333333%;
   }
   .col-md-4 {
     width: 33.33333333333333%;
@@ -4205,7 +4205,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 
 @media (min-width: 768px) {
   .navbar > .container .navbar-brand {
-    margin-left: -15px;
+    margin-left: -160px;
   }
 }
 
